gramatica_finalParser.py
# Generated from gramatica_final.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_finalParser ( Parser ):

    grammarFileName = "gramatica_final.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'struct'", "'.'", "','", 
                     "':'", "'break'", "'continue'", "'?'", "'program'", 
                     "'si'", "'sino'", "'while'", "'for'", "'return'", "'print'", 
                     "'switch'", "'case'", "'default'", "<INVALID>", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "'='", "';'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'&&'", "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PROGRAM", "SI", "SINO", "WHILE", "FOR", 
                      "RETURN", "PRINT", "SWITCH", "CASE", "DEFAULT", "TIPO", 
                      "LLAVEI", "LLAVED", "PAI", "PAD", "CORI", "CORD", 
                      "ASIG", "FINAL", "SUM", "RES", "MUL", "DIV", "MOD", 
                      "IGUAL", "NOIGUAL", "MENOR", "MAYOR", "MENORI", "MAYORI", 
                      "AND", "OR", "NOT", "STRING", "NUM", "ID", "COMENTARIO_LINEA", 
                      "COMENTARIO_BLOQUE", "WS" ]

    RULE_root = 0
    RULE_programa = 1
    RULE_importStmt = 2
    RULE_sentenciaGlobal = 3
    RULE_funcion = 4
    RULE_structDecl = 5
    RULE_campoStruct = 6
    RULE_accesoCampo = 7
    RULE_parametros = 8
    RULE_parametro = 9
    RULE_declaracion = 10
    RULE_accesoArray = 11
    RULE_arrayLiteral = 12
    RULE_sentencia = 13
    RULE_asignacion = 14
    RULE_expresionSi = 15
    RULE_cicloWhile = 16
    RULE_cicloFor = 17
    RULE_switchStmt = 18
    RULE_caseStmt = 19
    RULE_defaultStmt = 20
    RULE_breakStmt = 21
    RULE_continueStmt = 22
    RULE_bloque = 23
    RULE_expresion = 24
    RULE_comparacion = 25
    RULE_suma = 26
    RULE_termino = 27
    RULE_factor = 28
    RULE_llamadaFuncion = 29
    RULE_argumentos = 30
    RULE_returnStmt = 31
    RULE_printt = 32

    ruleNames =  [ "root", "programa", "importStmt", "sentenciaGlobal", 
                   "funcion", "structDecl", "campoStruct", "accesoCampo", 
                   "parametros", "parametro", "declaracion", "accesoArray", 
                   "arrayLiteral", "sentencia", "asignacion", "expresionSi", 
                   "cicloWhile", "cicloFor", "switchStmt", "caseStmt", "defaultStmt", 
                   "breakStmt", "continueStmt", "bloque", "expresion", "comparacion", 
                   "suma", "termino", "factor", "llamadaFuncion", "argumentos", 
                   "returnStmt", "printt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    PROGRAM=9
    SI=10
    SINO=11
    WHILE=12
    FOR=13
    RETURN=14
    PRINT=15
    SWITCH=16
    CASE=17
    DEFAULT=18
    TIPO=19
    LLAVEI=20
    LLAVED=21
    PAI=22
    PAD=23
    CORI=24
    CORD=25
    ASIG=26
    FINAL=27
    SUM=28
    RES=29
    MUL=30
    DIV=31
    MOD=32
    IGUAL=33
    NOIGUAL=34
    MENOR=35
    MAYOR=36
    MENORI=37
    MAYORI=38
    AND=39
    OR=40
    NOT=41
    STRING=42
    NUM=43
    ID=44
    COMENTARIO_LINEA=45
    COMENTARIO_BLOQUE=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(gramatica_finalParser.PROGRAM, 0)

        def LLAVEI(self):
            return self.getToken(gramatica_finalParser.LLAVEI, 0)

        def LLAVED(self):
            return self.getToken(gramatica_finalParser.LLAVED, 0)

        def EOF(self):
            return self.getToken(gramatica_finalParser.EOF, 0)

        def programa(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_finalParser.ProgramaContext)
            else:
                return self.getTypedRuleContext(gramatica_finalParser.ProgramaContext,i)


        def getRuleIndex(self):
            return gramatica_finalParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = gramatica_finalParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(gramatica_finalParser.PROGRAM)
            self.state = 67
            self.match(gramatica_finalParser.LLAVEI)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17592186680324) != 0):
                self.state = 68
                self.programa()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(gramatica_finalParser.LLAVED)
            self.state = 75
            self.match(gramatica_finalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcion(self):
            return self.getTypedRuleContext(gramatica_finalParser.FuncionContext,0)


        def declaracion(self):
            return self.getTypedRuleContext(gramatica_finalParser.DeclaracionContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(gramatica_finalParser.StructDeclContext,0)


        def sentenciaGlobal(self):
            return self.getTypedRuleContext(gramatica_finalParser.SentenciaGlobalContext,0)


        def cicloWhile(self):
            return self.getTypedRuleContext(gramatica_finalParser.CicloWhileContext,0)


        def cicloFor(self):
            return self.getTypedRuleContext(gramatica_finalParser.CicloForContext,0)


        def expresionSi(self):
            return self.getTypedRuleContext(gramatica_finalParser.ExpresionSiContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(gramatica_finalParser.SwitchStmtContext,0)


        def getRuleIndex(self):
            return gramatica_finalParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = gramatica_finalParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.funcion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.declaracion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.structDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.sentenciaGlobal()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.cicloWhile()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.cicloFor()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 83
                self.expresionSi()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 84
                self.switchStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramatica_finalParser.ID, 0)

        def FINAL(self):
            return self.getToken(gramatica_finalParser.FINAL, 0)

        def getRuleIndex(self):
            return gramatica_finalParser.RULE_importStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStmt" ):
                listener.enterImportStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStmt" ):
                listener.exitImportStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStmt" ):
                return visitor.visitImportStmt(self)
            else:
                return visitor.visitChildren(self)




    def importStmt(self):

        localctx = gramatica_finalParser.ImportStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(gramatica_finalParser.T__0)
            self.state = 88
            self.match(gramatica_finalParser.ID)
            self.state = 89
            self.match(gramatica_finalParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaGlobalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printt(self):
            return self.getTypedRuleContext(gramatica_finalParser.PrinttContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(gramatica_finalParser.AsignacionContext,0)


        def FINAL(self):
            return self.getToken(gramatica_finalParser.FINAL, 0)

        def getRuleIndex(self):
            return gramatica_finalParser.RULE_sentenciaGlobal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaGlobal" ):
                listener.enterSentenciaGlobal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaGlobal" ):
                listener.exitSentenciaGlobal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaGlobal" ):
                return visitor.visitSentenciaGlobal(self)
            else:
                return visitor.visitChildren(self)




    def sentenciaGlobal(self):

        localctx = gramatica_finalParser.SentenciaGlobalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sentenciaGlobal)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.printt()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.asignacion()
                self.state = 93
                self.match(gramatica_finalParser.FINAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(gramatica_finalParser.TIPO, 0)

        def ID(self):
            return self.getToken(gramatica_finalParser.ID, 0)

        def PAI(self):
            return self.getToken(gramatica_finalParser.PAI, 0)

        def PAD(self):
            return self.getToken(gramatica_finalParser.PAD, 0)

        def bloque(self):
            return self.getTypedRuleContext(gramatica_finalParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(gramatica_finalParser.ParametrosContext,0)


        def getRuleIndex(self):
            return gramatica_finalParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = gramatica_finalParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(gramatica_finalParser.TIPO)
            self.state = 98
            self.match(gramatica_finalParser.ID)
            self.state = 99
            self.match(gramatica_finalParser.PAI)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 100
                self.parametros()


            self.state = 103
            self.match(gramatica_finalParser.PAD)
            self.state = 104
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramatica_finalParser.ID, 0)

        def LLAVEI(self):
            return self.getToken(gramatica_finalParser.LLAVEI, 0)

        def LLAVED(self):
            return self.getToken(gramatica_finalParser.LLAVED, 0)

        def campoStruct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_finalParser.CampoStructContext)
            else:
                return self.getTypedRuleContext(gramatica_finalParser.CampoStructContext,i)


        def getRuleIndex(self):
            return gramatica_finalParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = gramatica_finalParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(gramatica_finalParser.T__1)
            self.state = 107
            self.match(gramatica_finalParser.ID)
            self.state = 108
            self.match(gramatica_finalParser.LLAVEI)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 109
                self.campoStruct()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(gramatica_finalParser.LLAVED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CampoStructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(gramatica_finalParser.TIPO, 0)

        def ID(self):
            return self.getToken(gramatica_finalParser.ID, 0)

        def FINAL(self):
            return self.getToken(gramatica_finalParser.FINAL, 0)

        def getRuleIndex(self):
            return gramatica_finalParser.RULE_campoStruct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCampoStruct" ):
                listener.enterCampoStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCampoStruct" ):
                listener.exitCampoStruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCampoStruct" ):
                return visitor.visitCampoStruct(self)
            else:
                return visitor.visitChildren(self)




    def campoStruct(self):

        localctx = gramatica_finalParser.CampoStructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_campoStruct)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(gramatica_finalParser.TIPO)
            self.state = 118
            self.match(gramatica_finalParser.ID)
            self.state = 119
            self.match(gramatica_finalParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccesoCampoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_finalParser.ID)
            else:
                return self.getToken(gramatica_finalParser.ID, i)

        def getRuleIndex(self):
            return gramatica_finalParser.RULE_accesoCampo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccesoCampo" ):
                listener.enterAccesoCampo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccesoCampo" ):
                listener.exitAccesoCampo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccesoCampo" ):
                return visitor.visitAccesoCampo(self)
            else:
                return visitor.visitChildren(self)




    def accesoCampo(self):

        localctx = gramatica_finalParser.AccesoCampoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_accesoCampo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(gramatica_finalParser.ID)
            self.state = 122
            self.match(gramatica_finalParser.T__2)
            self.state = 123
            self.match(gramatica_finalParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_finalParser.ParametroContext)
            else:
                return self.getTypedRuleContext(gramatica_finalParser.ParametroContext,i)


        def getRuleIndex(self):
            return gramatica_finalParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = gramatica_finalParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.parametro()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 126
                self.match(gramatica_finalParser.T__3)
                self.state = 127
                self.parametro()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(gramatica_finalParser.TIPO, 0)

        def ID(self):
            return self.getToken(gramatica_finalParser.ID, 0)

        def getRuleIndex(self):
            return gramatica_finalParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = gramatica_finalParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(gramatica_finalParser.TIPO)
            self.state = 134
            self.match(gramatica_finalParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(gramatica_finalParser.TIPO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_finalParser.ID)
            else:
                return self.getToken(gramatica_finalParser.ID, i)

        def ASIG(self):
            return self.getToken(gramatica_finalParser.ASIG, 0)

        def expresion(self):
            return self.getTypedRuleContext(gramatica_finalParser.ExpresionContext,0)


        def FINAL(self):
            return self.getToken(gramatica_finalParser.FINAL, 0)

        def CORI(self):
            return self.getToken(gramatica_finalParser.CORI, 0)

        def CORD(self):
            return self.getToken(gramatica_finalParser.CORD, 0)

        def arrayLiteral(self):
            return self.getTypedRuleContext(gramatica_finalParser.ArrayLiteralContext,0)


        def getRuleIndex(self):
            return gramatica_finalParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = gramatica_finalParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_declaracion)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(gramatica_finalParser.TIPO)
                self.state = 137
                self.match(gramatica_finalParser.ID)
                self.state = 138
                self.match(gramatica_finalParser.ASIG)
                self.state = 139
                self.expresion()
                self.state = 140
                self.match(gramatica_finalParser.FINAL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(gramatica_finalParser.TIPO)
                self.state = 143
                self.match(gramatica_finalParser.ID)
                self.state = 144
                self.match(gramatica_finalParser.FINAL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.match(gramatica_finalParser.TIPO)
                self.state = 146
                self.match(gramatica_finalParser.CORI)
                self.state = 147
                self.match(gramatica_finalParser.CORD)
                self.state = 148
                self.match(gramatica_finalParser.ID)
                self.state = 149
                self.match(gramatica_finalParser.ASIG)
                self.state = 150
                self.arrayLiteral()
                self.state = 151
                self.match(gramatica_finalParser.FINAL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(gramatica_finalParser.ID)
                self.state = 154
                self.match(gramatica_finalParser.ID)
                self.state = 155
                self.match(gramatica_finalParser.FINAL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccesoArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramatica_finalParser.ID, 0)

        def CORI(self):
            return self.getToken(gramatica_finalParser.CORI, 0)

        def expresion(self):
            return self.getTypedRuleContext(gramatica_finalParser.ExpresionContext,0)


        def CORD(self):
            return self.getToken(gramatica_finalParser.CORD, 0)

        def getRuleIndex(self):
            return gramatica_finalParser.RULE_accesoArray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccesoArray" ):
                listener.enterAccesoArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccesoArray" ):
                listener.exitAccesoArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccesoArray" ):
                return visitor.visitAccesoArray(self)
            else:
                return visitor.visitChildren(self)




    def accesoArray(self):

        localctx = gramatica_finalParser.AccesoArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_accesoArray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(gramatica_finalParser.ID)
            self.state = 159
            self.match(gramatica_finalParser.CORI)
            self.state = 160
            self.expresion()
            self.state = 161
            self.match(gramatica_finalParser.CORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CORI(self):
            return self.getToken(gramatica_finalParser.CORI, 0)

        def CORD(self):
            return self.getToken(gramatica_finalParser.CORD, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_finalParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(gramatica_finalParser.ExpresionContext,i)


        def getRuleIndex(self):
            return gramatica_finalParser.RULE_arrayLiteral
